@@ -73,7 +73,7 @@ NDefines.NCountry.INNOVATIVENESS_FIRST_PICKED_IDEA = 1.0
 NDefines.NCountry.INNOVATIVENESS_DAYS_AFTER_FIRST_PICK_VIABLE = 365
 NDefines.NCountry.REVOLUTION_SPREAD_COUNT = 7
 NDefines.NCountry.STATE_MAINTENANCE_DEV_FACTOR = 0.0075
-NDefines.NCountry.COHESION_NEIGHBOURING_COLONIZER = 0.025
+NDefines.NCountry.COHESION_NEIGHBOURING_COLONIZER = 0.02
 
 NDefines.NEconomy.MERCHANT_TIME_DISTANCE = 0.15
 NDefines.NEconomy.MISSIONARY_TIME_DISTANCE = 0.1
