@@ -18,6 +18,7 @@ native_basic_reform = {
 		global_institution_spread = -0.5
 		global_regiment_cost = -0.5
 		province_warscore_cost = 4
+		technology_cost = 2
 	}
 	valid_for_nation_designer = yes
 	nation_designer_cost = 0
