@@ -4309,7 +4309,15 @@ country_event = {
 
 	option = {
 		name = "FBIA93"
-		add_army_tradition = -5
+		if = {
+			limit = {
+				has_dlc = "Cradle of Civilization"
+			}
+			add_army_professionalism = -0.02
+		}
+		else = {
+			add_army_tradition = -5
+		}
 	}
 }
 
