@@ -3056,7 +3056,7 @@ country_event = {
 				capital_scope = {
 					OR = {
 						superregion = caucasia_superregion
-						superregion = caucasia_superregion
+						superregion = anatolia_superregion
 					}
 				}
 			}
