@@ -2,7 +2,7 @@
 #Misc
  RELIGIOUS_CONFLICT_RULES_ON: "§YReligious Conflicts§!\n- Crusades can be called by the Papal Controller\n- Catholic rulers can be excommunicated.\n- Catholic monarchs have Holy Orders.\n- Reformation Centers can appear.\n- Religion impact diplomacy."
  RELIGIOUS_CONFLICT_RULES_OFF: "This age has no special religious conflict. Reformation Centers are gone, there are no crusades being called, Holy Orders are absent, the Pope can not excommunicate" 
- estate_burghers_khmer_irrigation_effect_tooltip:0 "Every owned province in the §YMesopotamia§! superregion producing §YGrain§!, §YDates§!, §YBarley§!, §YRye§!, §YVegetables§! or §YRice§! gains:\nLocal Development Cost: §G-10%§!"
+ estate_burghers_khmer_irrigation_effect_tooltip: "Every owned province in the §YMesopotamia§! superregion producing §YGrain§!, §YDates§!, §YBarley§!, §YRye§!, §YVegetables§! or §YRice§! gains:\nLocal Development Cost: §G-10%§!"
  MONOPOLY_INCOME_LIVESTOCK_DESC: "from livestock or pig production."
 #Nobles Estate
  estate_nobles_frontier_resettlement: "Iberian Frontier Colonists"
