@@ -2,7 +2,7 @@
 #Misc
  RELIGIOUS_CONFLICT_RULES_ON: "§YReligiöser Konflikt§!\n- Kreuzzüge können vom Kontrolleur der Kurie ausgerufen werden.\n- Katholische Herrscher können exkommuniziert werden.\n- Katholische Monarchien haben Ritterorden. \n- Reformationszentren können auftauchen.\n- Religion hat Einfluss auf Diplomatie."
  RELIGIOUS_CONFLICT_RULES_OFF: "Dieses Zeitalter hat keine besonderen religiösen Konflikte. Reformationszentren wurden aufgelöst, Kreuzzüge beendet, Ritterorden aufgelöst und der Papst kann nicht mehr exkommunizieren."
- estate_burghers_khmer_irrigation_effect_tooltip:0 "Jede im Besitz befindliche Provinz in §YMesopotamien§!, die §YGetreide§!, §YDatteln§!, §YGerste§!, §YRoggen§!, §YGemüse§! oder §YReis§! produziert, erhält:\nEntwicklungskosten (Lokal): §G-10 %§!"
+ estate_burghers_khmer_irrigation_effect_tooltip: "Jede im Besitz befindliche Provinz in §YMesopotamien§!, die §YGetreide§!, §YDatteln§!, §YGerste§!, §YRoggen§!, §YGemüse§! oder §YReis§! produziert, erhält:\nEntwicklungskosten (Lokal): §G-10 %§!"
  MONOPOLY_INCOME_LIVESTOCK_DESC: "aus der Viehbestands- und Schweineproduktion."
 #Nobles Estate
  estate_nobles_frontier_resettlement: "Iberische Grenzkolonisten"
@@ -10,7 +10,7 @@
  estate_nobles_georgian_strong_duchies: "Starke georgische Herzogtümer"
  estate_nobles_georgian_strong_duchies_desc: "Georgien ist eine dezentralisierte Nation, in der die lokalen Herzöge und Grafen eine beträchtliche Unabhängigkeit von [Root.GetMdemder] [Root.Monarch.GetTitle] genießen. Dieses System hat seine Vorteile, macht die Aufrechterhaltung der königlichen Macht allerdings zu einer bedeutenden Herausforderung."
  estate_nobles_emboldened_aristocrats: "Ermutigte Aristokraten"
- estate_nobles_emboldened_aristocrats_desc: "Da der Staat durch die jüngsten Eroberungen von Basileios II. reicher geworden ist, hat die landbesitzende Aristokratie, die als Dynatoi bekannt ist, ihre Macht stetig vergrößert, ihre privaten Ländereien vergrößert und die freien Bauern ungestraft unterjocht."
+ estate_nobles_emboldened_aristocrats_desc: "Da der Staat durch die jüngsten Eroberungen von Basileios II. reicher geworden ist, hat die landbesitzende Aristokratie, die als Dynatoi bekannt ist, ihre Macht stetig vergrößert, ihre privaten Ländereien ausgedehnt und die freien Bauern ungestraft unterjocht."
  estate_ealdormen: "Ealdormen"
  estate_vitings: "Vitings"
  EST_VAL_THING_POWER: "Übertragung von Befugnissen an die Volksersammlung: §Y$VAL$%§!"
