@@ -11,11 +11,13 @@
 -The Prussian Confederacy will start with more provinces
 -Estates will no longer demand the construction of a manufactory before tech 32
 -Natives can now conquer land and vassalize in peace deals
+-Natives will get a +200 % tech cost penalty
 -Improved the code of the decision for Byzantium to reform their government (thanks to HawkV)
 -Tribal land should no longer become uncolonized randomly
 -Fixed some overlapping interface
 -Instances of Reform Progress growth modifier will now work correctly again
 -Removed war canoes from the mod
+-Federations will form even slower now
 -The AI will less often form Lombardy
 -Changing state religions will no longer refresh missions
 -Hopefully fixed terra incognita appearing when switching to England as Normandy
